<resources>
    <string name="app_name">Ryme</string>
    <string name="facebook_app_id">955097217910752</string>
    <string name="google_app_id">261016450965</string>
    <string name="menu_inbox">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_categories">Categories</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sent_fragment">Hello Sent Fragment</string>
    <string name="primary_fragment">Hello Primary Fragment</string>
    <string name="social_fragment">Hello Social Fragment</string>
    <string name="updates_fragment">Hello Updates Fragment</string>
    <string name="favorite">favorite</string>
    <string name="title_activity_track">TrackActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_single">SingleActivity</string>
    <string name="dummy_button">Next</string>
    <string name="dummy_content">Next</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_new_release_track">NewReleaseTrackActivity</string>
    <string name="title_activity_trending_track">TrendingTrackActivity</string>
    <string name="title_activity_artist_profile">ArtistProfileActivity</string>
    <string name="title_activity_artist_new_track">ArtistNewTrackActivity</string>
    <string name="title_activity_artist_track_display">ArtistTrackDisplayActivity</string>
    <string name="title_first_section">Frist Section</string>
    <string name="title_checkbox_preference">checkBox Preference</string>
    <string name="default_checkbox_preference">true</string>
    <string name="title_edittext_preference">Edit Text Preference</string>
    <string name="dialog_title_edittext_preference">Change Text</string>
    <string name="summary_edittext_preference">About to Change Things</string>
    <string name="title_second_section">Second Section</string>
    <string name="title_list_preference">List Preference</string>
    <string name="dialog_title_list_preference">Choose One</string>
    <string name="title_intent_preference">Contact Us</string>
    <string-array name="entries_list_preference">
        <item>first one</item>
        <item>first one</item>
        <item>first one</item>
        <item>first one</item>
    </string-array>
    <string-array name="entryvalues_list_preference">
        <item>first value</item>
        <item>first value</item>
        <item>first value</item>
        <item>first value</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="search_hint">search...</string>
    <string name="track_transition_string">track_transition</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome_next_button">Sign Up</string>
    <string name="purpose_text">Sign up to access unlimited musics.</string>
    <string name="sign_in_option">SIGN IN</string>
    <string name="join_button">Join</string>
    <string name="agreement_text">By Sign up, you agree to our Terms and Privacy Policy.</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="verification_code">Verification Code</string>
    <string name="sign_in_button">Sign in</string>
    <string name="signup_option">SIGN UP</string>
    <string name="title_activity_follow_category">FollowCategoryActivity</string>
    <string name="PhoneEditTextHint">Phone Number</string>
    <string name="dial_code_edit_text_hint">Dial Code</string>
    <string name="username_text_string">Username</string>
    <string name="password_hint_text">Password</string>
    <string name="signInButton">Sign In</string>
    <string name="otpCode">Enter Code</string>
    <string name="verify">Verify</string>
    <string name="phonePurpose">You\'ll receive an SMS to verify your Phone Number.</string>
    <string name="notice_fail">(Enter the Verfication Code below in case we fail to detect the SMS automatically)</string>
    <string name="notice_success">Sit back and Relax! While we verify your phone number</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="commentHint">What do you think?</string>
    <string name="artistNameTest">Shatta Walle</string>
    <string name="followers">followers</string>
    <string name="followersTest">200000</string>
    <string name="track_title_test">Pull Up ft Patoranky</string>
    <string name="track_duration_test">3:55</string>
    <string name="artist_test">StoneBowy</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_like">like</string>
    <string name="menu_profile">profile</string>
    <string name="menu_search">search</string>
    <string name="comment_body_test">Small Text Small Text Small TextSmall TextSmall Text Small Text Small Text Small Text Small Text Small Text Small Text Small Text Small Text Small Text Small TextSmall TextSmall Text Small Text Small Text Small Text Small Text Small Text Small Text Small Text</string>
    <string name="username_test">Medium Text Medium Text</string>
    <string name="time_test">2m</string>
    <string name="release_date_test">3d</string>
    <string name="likes_view_test">2k</string>
    <string name="downloads_view_test">3k</string>
    <string name="streams_view_test">2k</string>
    <string name="artist_track_title_view_test">Stone Boy - Pull Up ft Patoranky</string>
    <string name="upload_menu_title">Uploads</string>
    <string name="settings_menu_title">Settings</string>
    <string name="terms_of_being_artist">
        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"
    </string>
    <string name="category_text_hint">Category</string>
    <string name="stage_name_text_hint">Stage Name</string>
    <string name="later_text">later</string>
    <string name="post_text">post</string>
    <string name="cancel_text">cancel</string>
    <string name="upload_text">Upload</string>
    <string name="track_title_text">Track Title</string>
    <string name="category_text">Category</string>
    <string name="any_featurings_text">Any Featuring(s) on this Track?</string>
    <string name="artists_names_text">Artists Names...</string>
    <string name="track_cover_text">Track Cover</string>
    <string name="released_date_text">Released Date :</string>
    <string name="pick_date_text">Pick Date</string>
    <string name="could_download_text">Could Your Fans Download this Track?</string>
    <string name="select_track_text">Select the track</string>
    <string name="submit_text">Submit</string>
</resources>