<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    android:padding="8dp">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/new_track_title_view_layout"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <EditText
            android:id="@+id/new_track_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/track_title_text"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/new_track_title_view_layout"
        android:layout_width="match_parent"
        android:id="@+id/track_genre_layout"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <primr.apps.eurakacachet.ryme.ryme.utils.helpers.layout.CustomAutoCompleteTextView
            android:completionThreshold="1"
            android:id="@+id/track_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_text"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:id="@+id/any_coll_view_wrapper"
        android:layout_below="@id/track_genre_layout"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_marginBottom="5dp"
        android:layout_height="25dp">

        <TextView
            android:id="@+id/any_feature_text"
            android:gravity="center"
            android:text="@string/any_featurings_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <android.support.v7.widget.SwitchCompat
            android:layout_toEndOf="@id/any_feature_text"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/RymeSwitch"
            android:id="@+id/featuring_switch"/>

    </RelativeLayout>

    <View
        android:id="@+id/first_divider"
        android:layout_below="@id/any_coll_view_wrapper"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/first_divider"
        android:layout_width="match_parent"
        android:id="@+id/collabors_edit_wrap_view"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <EditText
            android:id="@+id/featuring_artists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/artists_names_text"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:id="@+id/new_track_cover_wrapper"
        android:layout_below="@id/collabors_edit_wrap_view"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/new_track_cover_text"
            android:text="@string/track_cover_text"
            android:layout_width="wrap_content"
            android:layout_marginEnd="100dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/new_track_cover_text_view"
            android:text="@string/track_cover_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/new_track_cover_image"
            android:layout_toEndOf="@id/new_track_cover_text"
            android:layout_alignParentEnd="true"
            android:src="@drawable/wallpaper"
            android:scaleType="centerCrop"
            android:layout_marginBottom="10dp"
            android:layout_width="50dp"
            android:layout_height="100dp"/>
    </RelativeLayout>

    <View
        android:id="@+id/fifth_divider"
        android:layout_below="@id/new_track_cover_wrapper"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:orientation="horizontal"
        android:id="@+id/select_released_date"
        android:layout_width="match_parent"
        android:layout_below="@id/fifth_divider"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/released_date_text"
            android:id="@+id/pick_released_date_text"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>
        <Button
            android:textColor="@color/white_ash"
            android:background="@color/lighterBlueBlack"
            android:id="@+id/pick_date_button"
            android:text="@string/pick_date_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"/>
    </LinearLayout>

    <View
        android:id="@+id/second_divider"
        android:layout_below="@id/select_released_date"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout
        android:id="@+id/track_downloadable"
        android:layout_below="@id/second_divider"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_marginBottom="5dp"
        android:layout_height="25dp">

        <TextView
            android:id="@+id/is_new_track_downloadable_text"
            android:gravity="center"
            android:text="@string/could_download_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <android.support.v7.widget.SwitchCompat
            android:layout_toEndOf="@id/is_new_track_downloadable_text"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/RymeSwitch"
            android:id="@+id/downloadable_switch"/>

    </RelativeLayout>

    <View
        android:id="@+id/third_divider"
        android:layout_below="@id/track_downloadable"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/select_new_track_wrap"
        android:layout_width="match_parent"
        android:layout_below="@id/third_divider"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/select_track_text"
            android:id="@+id/pick_new_track_file_text"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:background="@color/lighterBlueBlack"
            android:id="@+id/new_track_upload"
            android:src="@drawable/ic_action_new_audio_file"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"/>
    </LinearLayout>

    <View
        android:id="@+id/fourth_divider"
        android:layout_below="@id/select_new_track_wrap"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_below="@id/select_new_track_wrap"
        android:layout_height="wrap_content">
        <Button
            android:layout_marginEnd="4dp"
            android:background="@color/lightBlueBlack"
            android:id="@+id/cancel_upload_button"
            android:textColor="@color/white_ash"
            android:textAllCaps="false"
            android:text="@string/cancel_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="35dp"/>
        <Button
            android:background="@drawable/native_button_state"
            android:textColor="@color/white_ash"
            android:id="@+id/confirm_upload_button"
            android:textAllCaps="false"
            android:text="@string/upload_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"/>
    </LinearLayout>

</RelativeLayout>