<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="primr.apps.eurakacachet.com.rhyme.view.LoginActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageView3"
        android:src="@drawable/ryme_text"
        android:layout_above="@+id/editText"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username_hint"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/imageView3"
        android:layout_alignStart="@+id/editText3"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password_hint"
        android:id="@+id/editText3"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button"
        android:textAllCaps="false"
        android:background="@drawable/register_next_button_shape"
        android:id="@+id/join_button"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/white"
        android:layout_marginBottom="103dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/forgot_password_option"
        android:id="@+id/textView"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="25dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
